Added logic to save and retrieve engine details
